--- a/next13-esm/package.json
+++ b/next13-esm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rlayers-next13",
+  "name": "rlayers-next13-esm",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -10,11 +10,10 @@
   },
   "dependencies": {
     "lru-cache": "^7.7.1",
-    "next": "^13.0.2",
-    "next-transpile-modules": "^10.0.0",
-    "ol": "^6.14.1",
+    "next": "^13.4.7",
+    "ol": "^7.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rlayers": "^1.4.5"
+    "rlayers": "^1.4.9"
   }
 }
