--- a/cra-react18-ts/package.json
+++ b/cra-react18-ts/package.json
@@ -8,13 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "ol": "^6.14.1",
+    "ol": "^9.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "rlayers": "^1.3.2",
+    "rlayers": "^3.0.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0"
   }
 }
